// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Btn should match snapshot default 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn svelte-1eq3l3c"
      type="button"
    />
  </div>
</body>
`;

exports[`Btn should match snapshot props 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn customCss _tadashi_svelte_btn___default_fx _tadashi_svelte_btn___outline svelte-1eq3l3c"
      data-test="1"
      required="true"
      type="submit"
    />
  </div>
</body>
`;

exports[`Btn should match snapshot with slot 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn svelte-1eq3l3c"
      disabled=""
      required="false"
      type="button"
    >
      Test 
      <b>
        bold
      </b>
    </button>
  </div>
</body>
`;
